dev: update gh workflows

--- a/.github/workflows/build_release_apk.yml
+++ b/.github/workflows/build_release_apk.yml
@@ -2,6 +2,37 @@ name: Build Release APK
 
 on:
   workflow_dispatch:
+  workflow_call:
+  push:
+    branches:
+      - 'master'
+      - 'dev'
+      - '*-dev'
+      - 'dev-*'
+    paths-ignore:
+      - '.idea/**'
+      - '.gitattributes'
+      - '.github/**.json'
+      - '.gitignore'
+      - '.gitmodules'
+      - '**.md'
+      - 'LICENSE'
+      - 'NOTICE'
+  pull_request:
+    branches:
+      - 'master'
+      - 'dev'
+      - '*-dev'
+      - 'dev-*'
+    paths-ignore:
+      - '.idea/**'
+      - '.gitattributes'
+      - '.github/**.json'
+      - '.gitignore'
+      - '.gitmodules'
+      - '**.md'
+      - 'LICENSE'
+      - 'NOTICE'
 
 jobs:
   build:
