refactor: simplify GH workflows, gitignore

--- a/.github/workflows/build_debug_apk.yml
+++ b/.github/workflows/build_debug_apk.yml
@@ -4,40 +4,14 @@ on:
   workflow_dispatch:
   workflow_call:
   push:
-    branches:
-      - 'master'
-      - 'dev'
-      - '*-dev'
-      - 'dev-*'
     paths-ignore:
-      - '.idea/**'
-      - '.gitattributes'
-      - '.github/**.json'
-      - '.gitignore'
-      - '.gitmodules'
       - '**.md'
       - 'LICENSE'
-      - 'NOTICE'
   pull_request:
-    branches:
-      - 'master'
-      - '*-dev'
-      - 'dev-*'
-    paths-ignore:
-      - '.idea/**'
-      - '.gitattributes'
-      - '.github/**.json'
-      - '.gitignore'
-      - '.gitmodules'
-      - '**.md'
-      - 'LICENSE'
-      - 'NOTICE'
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: set up JDK 11
@@ -46,11 +20,8 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: gradle
-
     - name: Build with Gradle
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: ./gradlew assembleDebug
+      run: ./gradlew assembleDebug --no-daemon
     - name: Upload APK
       uses: actions/upload-artifact@v2
       with:
