--- a/.github/workflows/build_release_apk.yml
+++ b/.github/workflows/build_release_apk.yml
@@ -26,7 +26,7 @@ jobs:
       id: sign_app
       uses: r0adkll/sign-android-release@v1
       with:
-        releaseDirectory: app/build/outputs/apk/release/
+        releaseDirectory: app/build/outputs/apk/release
         signingKeyBase64: ${{ secrets.SIGNING_KEYSTORE }}
         keyStorePassword: ${{ secrets.SIGNING_KEYSTORE_PASSWORD }}
         alias: ${{ secrets.SIGNING_KEY_ALIAS }}
@@ -37,4 +37,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: Release APK
-        path: ${{steps.sign_apk.outputs.signedReleaseFile}}
+        path: app/build/outputs/apk/release/*.apk
