--- a/.github/workflows/build_release_apk.yml
+++ b/.github/workflows/build_release_apk.yml
@@ -34,7 +34,7 @@ jobs:
       env:
         BUILD_TOOLS_VERSION: "33.0.1"
     - name: Upload APK
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: Release APK
-        path: app/build/outputs/apk/release/*.apk
+        path: ${{steps.sign_app.outputs.signedReleaseFile}}
