--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,7 @@ android {
     }
     composeOptions {
         // https://androidx.dev/storage/compose-compiler/repository
-        kotlinCompilerExtensionVersion '1.4.1-dev-k1.8.10-c312d77f4cb'
+        kotlinCompilerExtensionVersion '1.4.3'
     }
 }
 
