--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ plugins {
 
 android {
     compileSdkVersion 33
+    buildToolsVersion "33.0.2"
     namespace "com.alexjlockwood.twentyfortyeight"
 
     defaultConfig {
